2005-05-01  Jorn Baayen  <jbaayen@gnome.org>

	* src/Metadata.cs:

	Strip leading and trailing spaces from tags.

2005-04-28  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Lock Global.DB while copying Global.DB.Songs.

2005-04-28  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* configure.in:

	Release 0.8.3pre1.

2005-04-28  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/AddWindow.glade:
	* data/glade/SkipToWindow.glade:

	Set dialog window type hint.
	
	* src/PlaylistWindow.cs:

	Set transiency before opening dialog.

2005-04-27  Mark McLauchlan  <mrm21@sussex.ac.uk>
	    Jorn Baayen  <jbaayen@gnome.org>

	* PluginLib/IPlayer.cs:
	* doc/en/Muine.PluginLib/IPlayer.xml:
	* src/PlaylistWindow.cs:

	Added AllSongs property.

2005-04-27  Peter Johanson  <latexer@gentoo.org>

	* configure.in:

	Fix faad2 detection.

2005-04-27  Peter Johanson  <latexer@gentoo.org>

	* src/PlaylistWindow.cs:

	Call SongChanged () in Clear ().

2005-04-27  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:
	* src/HandleView.cs:

	Minor cleanup.

2005-04-01  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-18  Jeroen Zwartepoorte  <jeroen.zwartepoorte@gmail.com>

	* src/HandleView.cs: Use the HandleModel also for the TreeView.Model
	property (why does HandleView have a new Model property in the first
	place?). This makes muine work again.

2005-03-16  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/HandleView.cs:
	
	s/this.Model/this.model -- builds (wrongly) with
	Mono 1.0.x but not with Mono 1.1.x, now fixed.

2005-03-15  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/About.cs:
	* src/Actions.cs:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/AddWindow.cs:
	* src/AddWindowEntry.cs:
	* src/AddWindowList.cs:
	* src/Album.cs:
	* src/CellRendererText.cs:
	* src/ColoredCellRendererPixbuf.cs:
	* src/Config.cs:
	* src/CoverDatabase.cs:
	* src/CoverGetter.cs:
	* src/CoverImage.cs:
	* src/Database.cs: